# skillex

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
doc/: installation-and-setup.md
src/skillex/: __init__.py  __main__.py  cli.py  models.py
src/skillex/core/: install.py  lockfile.py  repository.py  version.py
src/skillex/providers/: __init__.py  base.py  claude.py  codex.py  gemini.py
src/skillex/utils/: commit.py
tests/: test_core_workflow.py
