[project]
name = "skillex"
version = "0.1.0"
description = "Manage AI agent skills across multiple providers"
authors = [{name = "User", email = "user@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "agents", "skills", "cli", "claude", "codex", "gemini"]

dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "GitPython>=3.1.0",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
skillex = "skillex.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"skill" = "skillex/templates/skillex-skill"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src/skillex --cov-report=term-missing"
